[package]
name = "form"
version = "0.9.0"
authors = ["David McGillicuddy <contact@djmcgill.co.uk>"]
description = "A small script to move inline modules into the proper directory structure"
license = "MIT"
repository = "https://github.com/djmcgill/form"
edition = "2018"

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"
getopts = "0.2"
log = "0.4.1"
env_logger = "0.6"
failure = "0.1.1"

[dependencies.syn]
version = "0.15.0"
features = ["full", "fold", "printing"]

[[bin]]
name = "form"
test = false
doc = false

[dev-dependencies]
tempfile = "3.0"

[profile.dev]
lto = false
