[package]
name = "form"
version = "0.10.0"
authors = ["David McGillicuddy <contact@djmcgill.co.uk>"]
description = "A small script to move inline modules into the proper directory structure"
license = "MIT"
repository = "https://github.com/djmcgill/form"
edition = "2021"

[dependencies]
quote = "1.0.20"
proc-macro2 = "1.0.42"
getopts = "0.2.21"
log = "0.4.17"
env_logger = "0.9.0"
anyhow = "1.0.58"

[dependencies.syn]
version = "1.0.98"
features = ["full", "fold", "printing", "extra-traits"]

[[bin]]
name = "form"
test = false
doc = false

[dev-dependencies]
tempfile = "3.3.0"
